# stm32_driver_template

./: .gitignore  CMakeLists.txt  README.md
module_name/: CMakeLists.txt
src/: Drv_Template.c
